<resources>
    <string name="app_name">WakeUpIndia</string>
    <string name="error_message">Oops..! we cannot process your request now</string>
    <string name="user_name_title">Let Me Know Your Name</string>
    <string name="password_title">Validate Your Password</string>
    <string name="forgot_password">Did you forgot your password?</string>
    <string name="sign_up_title">Want To Join Us?</string>
    <string name="sign_in_title">Authorize Me</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">email_id@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permission_msg">Please Provide Required Permissions To Continue</string>
    <string name="logout_msg">Press again to logout</string>
    <string name="success_msg">Success</string>


</resources>
