<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:background="@color/colorPrimary">
        <EditText
            android:hint="@string/user_name_title"
            style="@style/text_style"/>
        <EditText
            android:hint="@string/password_title"
            style="@style/text_style"/>
        <TextView
            android:text="@string/sign_in_title"
            android:onClick="signIn"
            android:id="@+id/signIn_id"
            style="@style/text_style"/>
        <TextView
            android:text="@string/forgot_password"
            style="@style/text_style"/>
        <TextView
            android:text="@string/sign_up_title"
            style="@style/text_style"/>

    </LinearLayout>

</RelativeLayout>